# interactive-colorization-engine

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
configs/: mamba.yaml
scripts/: __init__.py  evaluate.py  inference.py  model_loader.py  train.py
scripts/utils/: __init__.py  dataloader.py
src/colorization_engine/configs/: evaluate.yaml  inference.yaml  train.yaml
src/colorization_engine/configs/loss/: colorization.yaml  l1.yaml
src/colorization_engine/configs/model/: control_color.yaml  controlnet_recolor.yaml  ddcolor.yaml  eccv16.yaml  icolorit.yaml  mamba.yaml  mamba_undirectional.yaml  pix2pix.yaml  siggraph17.yaml  unicolor.yaml
src/colorization_engine/data/: __init__.py  dataloader.py  datamodule.py  dataset.py  transforms.py
src/colorization_engine/data/datasets/: __init__.py  paired.py  preparements.py  single.py
src/colorization_engine/data/transforms/: __init__.py  colorization.py
src/colorization_engine/data_loaders/: dataset.py  transforms.py
src/colorization_engine/evaluation/: metrics.py
src/colorization_engine/factory/: __init__.py  loss_factory.py  model_factory.py  registry.py
src/colorization_engine/loss/: __init__.py  base_loss.py  colorization.py  l1.py
src/colorization_engine/models/: __init__.py  ddcolor.py  deoldify.py  eccv16.py  icolorit.py  mamba.py  mamba2.py  my_colorization.py  siggraph17.py  zhang.py
src/colorization_engine/models/cnn/: __init__.py  eccv16.py  siggraph17.py
src/colorization_engine/models/diffusion/: __init__.py  control_color.py  controlnet_recolor.py
src/colorization_engine/models/gan/: __init__.py  pix2pix.py
src/colorization_engine/models/ssm/: __init__.py  mamba.py  mamba_undirectional.py
src/colorization_engine/models/tranformer/: ddcolor.py  icolorit.py
src/colorization_engine/models/transformer/: __init__.py  ddcolor.py  unicolor.py
src/colorization_engine/models/util_models/: __init__.py  base_colorizer.py  mamba_shared.py
src/colorization_engine/scripts/: __init__.py  evaluate.py  inference.py  inspect_ckpt.py  model_loader.py  optimize_ckpt.py  train.py
src/colorization_engine/training/: lightning_module.py  losses.py  trainer.py
src/colorization_engine/utils/: __init__.py  color_space.py  logger.py  parser.py  patches.py  saliency.py  schema.py
tests/integration_tests/: test_data.py  test_models.py
tests/smoke_tests/: test_lightning_module.py
tests/unit_tests/: test_color_space.py  test_factory.py  test_loss.py  test_metrics.py
(+3 files in other folders)
