[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-colorization-engine"
dynamic = ["version"]
requires-python = ">= 3.12"
authors = [
  {name = "Klymentiev Maksym", email = "dadmon1901@gmail.com"},
]
description = "Core machine learning engine for interactive image and video colorization."
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy",
    "scipy",

    "tqdm",
    "matplotlib",

    "torch",
    "albumentations",
    "opencv-python",

    "torchvision",
    "torchmetrics",
    "mamba-ssm",

    "hydra-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark"
]

[project.urls]
Repository = "https://github.com/KlymentievMaksym/interactive-colorization-engine.git"
Issues = "https://github.com/KlymentievMaksym/interactive-colorization-engine/issues"

[project.scripts]
train = "colorization_engine.scripts.train:train"
evaluate = "colorization_engine.scripts.evaluate:evaluate"
inference = "colorization_engine.scripts.inference:inference"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

[tool.setuptools_scm]
root = "."
fallback_version = "0.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"